<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/radiant_red"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/timer_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="00:00"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/question_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/timer_txt_view"
        android:text="@string/txt_view_question_placement"
        android:textColor="@color/white"
        android:textStyle="bold">
    </TextView>

    <Button
        android:id="@+id/answer_btn_one"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/question_txt_view"
        android:layout_marginTop="16dp"
        android:text="@string/answer_one"
        android:textColor="@color/raisin_black"
        android:background="@color/brilliant_azure">
    </Button>

    <Button
        android:id="@+id/answer_btn_two"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/answer_btn_one"
        android:layout_marginTop="16dp"
        android:text="@string/answer_two"
        android:textColor="@color/raisin_black"
        android:background="@color/brilliant_azure">
    </Button>

    <Button
        android:id="@+id/answer_btn_three"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/answer_btn_two"
        android:layout_marginTop="16dp"
        android:text="@string/answer_three"
        android:textColor="@color/raisin_black"
        android:background="@color/brilliant_azure">
    </Button>

    <Button
        android:id="@+id/answer_btn_four"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/answer_btn_three"
        android:layout_marginTop="16dp"
        android:text="@string/answer_four"
        android:textColor="@color/raisin_black"
        android:background="@color/brilliant_azure">
    </Button>

    <Button
        android:id="@+id/exit_quiz_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_btn_confirm"
        android:text="@string/btn_exit"
        android:textColor="@color/raisin_black">
    </Button>
</RelativeLayout>