<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.Holo.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical"
    android:background="@color/radiant_red"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/quiz_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/email"
        android:src="@drawable/quizzard_logo">
    </ImageView>




    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/password"
        android:layout_marginBottom="16dp"
        android:paddingStart="10dp"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/shape_edit_text">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/sign_up_btn"
        android:paddingStart="10dp"
        android:layout_marginBottom="32dp"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/shape_edit_text">
    </EditText>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/login_txt"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_btn_confirm"
        android:text="@string/btn_login"
        android:textColor="@color/raisin_black">
    </Button>

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:textColor="@color/raisin_black"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/txt_link_sign_up"
        android:layout_centerHorizontal="true">
    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_logo_login"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone">
    </ProgressBar>
</RelativeLayout>